--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GithubProfileAngular</title>
+  <title>GitHub Profile</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="GitHub profile UI: header, profile sidebar, repositories, contributions, and activity overview.">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="color-scheme" content="light dark">
+
+  <!-- Open Graph / Twitter fallbacks (overridden at runtime) -->
+  <meta property="og:type" content="profile">
+  <meta property="og:title" content="GitHub Profile">
+  <meta property="og:description" content="Profile, repositories, contributions, and activity overview.">
+  <meta property="og:image" content="/favicon.ico">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="canonical" href="/">
 </head>
 <body>
   <app-root></app-root>
